# ns-pixels

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.cargo/: config.local.toml.example  config.toml
src/: accel.rs  decompress.rs  display.rs  feed.rs  gzip.rs  input.rs  lib.rs  map_mode.rs  ns_api.rs  persist.rs  projection.rs  registry.rs  train.rs  train_xml.rs  xml_parser.rs  zmq.rs
