[package]
edition      = "2024"
name         = "ns-pixels"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ns-pixels"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "dns",
] }
embedded-io-async = "0.7.0"
esp-alloc = { version = "0.10.0", features = ["nightly"] }
esp-backtrace = { version = "0.19.0", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32s3",
  "log-04",
  "unstable",
  "wifi",
] }
static_cell      = "2.1.1"
reqwless = { version = "0.14.0", default-features = false }
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"] }
esp-hub75 = { version = "0.11.0", features = ["esp32s3", "iram"] }
xmlparser = { version = "0.13.6", default-features = false }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
