[package]
authors      = ["Aleksandr Andreev <dandi.vlg@gmail.com>"]
edition      = "2024"
license      = "MIT OR Apache-2.0"
name         = "ns-pixels"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ns-pixels"
path = "./src/bin/main.rs"

[dependencies]
# --- esp-hal and ESP32-S3 runtime ---
esp-hal                = { version = "~1.1.0", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos               = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3", "log-04"] }
esp-radio              = { version = "0.18.0", features = ["esp-alloc", "esp32s3", "log-04", "unstable", "wifi"] }
esp-alloc              = { version = "0.10.0", features = ["nightly"] } # `nightly` enables Box::new_in for PSRAM allocations
esp-backtrace          = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3", "log-04"] }
esp-println            = { version = "0.17.0", features = ["esp32s3", "log-04"] }
esp-storage            = { version = "0.9", features = ["esp32s3"] }

# --- Embassy async runtime + abstractions ---
embassy-executor     = { version = "0.10.0", features = ["log"] }
embassy-time         = { version = "0.5.0", features = ["log"] }
embassy-sync         = "0.8.0"
embassy-futures      = "0.1"
embassy-embedded-hal = "0.6"

# --- Networking: wifi/TCP stack + HTTPS client ---
embassy-net       = { version = "0.9.1", features = ["dhcpv4", "log", "medium-ethernet", "tcp", "dns"] }
embedded-io-async = "0.7.0"
# In-tree vendored copy of drogue-iot/reqwless with one extra line in
# src/client.rs: `enable_rsa_signatures()` so embedded-tls advertises RSA sig
# algorithms during the handshake. Without it, RSA-only servers (e.g., Azure
# API Management, where the NS gateway lives) reject with HandshakeFailure
# since the default config only offers ECDSA P-256. Drop this once a crates.io
# reqwless release carries the fix.
reqwless = { path = "vendor/reqwless", default-features = false, features = ["embedded-tls"] }

# --- Display ---
esp-hub75         = { version = "0.11.0", features = ["esp32s3", "iram"] }
embedded-graphics = { version = "0.8", default-features = false } # used only for `Point`, which `esp-hub75`'s framebuffer API takes

# --- Parsing / serialization ---
serde           = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
xmlparser       = { version = "0.13.6", default-features = false }
miniz_oxide     = { version = "0.9.1", default-features = false, features = ["with-alloc"] } # gzip inflate for the NDOV feed

# --- Storage ---
sequential-storage = "7" # wear-leveled K/V on top of esp-storage's NorFlash

# --- Misc ---
log         = "0.4.27"
heapless    = "0.8"
static_cell = "2.1.1"

# Profile tuning: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Default debug profile is too slow and too big for resource-constrained
# devices; keep some optimization even in dev builds.
opt-level = "s"

[profile.release]
codegen-units = 1     # single-thread LLVM lets it optimize more aggressively
debug         = 2     # keep full debug info; useful for esp-backtrace decoding
lto           = 'fat'
opt-level     = 's'
